<resources>
    <string name="app_name">My Application</string>
    <string name="nav_home">Home</string>
    <string name="nav_notification">Notification</string>
    <string name="nav_notif">Notification</string>
    <string name="nav_articles">Articles</string>
    <string name="nav_scholarships">Scholarships</string>
    <string name="nav_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_detail_article">DetailArticleActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
